tests/partial-sigs/should_fail/NestedExtraConstraintsWildcard.hs
{-# LANGUAGE RankNTypes, PartialTypeSignatures #-}
module NestedExtraConstraintsWildcard where

foo :: Bool -> (Eq a, _) => a
foo = undefined
