tests/partial-sigs/should_fail/NestedExtraConstraintsWildcard.stderr

NestedExtraConstraintsWildcard.hs:4:23: error: [GHC-65507]
    • Wildcard ‘_’ not allowed in a constraint
        except as the last top-level constraint of a type signature
          e.g  f :: (Eq a, _) => blah
    • In the type signature for ‘foo’
